# django-sync-migrations

./: .gitignore  README.md  django_sync_migrations.py  publishing_notes.md  pyproject.toml
.github/workflows/: publish.yml
src/: django_sync_migrations.py  resequence_migrations.py
