[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-sync-migrations"
version = "0.1.0"
description = "Sync Django migrations to match the dev branch, then checkout dev."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
django-sync-migrations = "django_sync_migrations:main"
