[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "django-sync-migrations"
version = "0.2.3"
description = "Sync Django migrations to match the dev branch, then checkout dev."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
django-sync-migrations = "src.django_sync_migrations:main"

[project.urls]
Homepage = "https://github.com/sponrad/django-sync-migrations"
Issues = "https://github.com/sponrad/django-sync-migrations/issues"